# recsys

./: .gitignore  README.md  pyproject.toml
api/: api.ipynb  api_fastapi.py  api_flask.py  pyproject.toml
recsys/: Deep&Cross.ipynb  DeepFM.ipynb  FM.ipynb  NCF.ipynb  TensorFlow Recommenders.ipynb  Transformer.ipynb  WIde&Deep.ipynb  faiss.ipynb  item2vec.ipynb  pyproject.toml  word2vec_tensorflow.ipynb
recsys_algorithms/: FM.ipynb  NCF.ipynb
recsys_algorithms/FM_FFM/.ipynb_checkpoints/: FM-checkpoint.ipynb  NCF-checkpoint.ipynb
recsys_algorithms/FM_FFM/logs/fit/20200623-154544/train/: events.out.tfevents.1592919944.linchen-VirtualBox.14440.245.v2  events.out.tfevents.1592919945.linchen-VirtualBox.profile-empty
recsys_algorithms/FM_FFM/logs/fit/20200623-154544/train/plugins/profile/2020_06_23_15_45_45/: linchen-VirtualBox.input_pipeline.pb  linchen-VirtualBox.overview_page.pb  linchen-VirtualBox.tensorflow_stats.pb
recsys_algorithms/FM_FFM/logs/fit/20200623-154544/validation/: events.out.tfevents.1592919974.linchen-VirtualBox.14440.133976.v2
recsys_algorithms/FM_FFM/model/: ffm_model.out  ffm_output.txt  fm_model.out  fm_output.txt
recsys_algorithms/data/: data_ffm_test.txt  data_fm_test.csv
recsys_algorithms/xl_demo/criteo_ctr/: Untitled.ipynb  output.txt
tests/: test_recsys_algorithms.py
