[tool.poetry]
name = "recsys_algorithms"
version = "0.1.0"
description = ""
authors = ["Linchen Xiao <linchen.xiao＠metronom.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.4"
jupyter = "^1.0.0"
cmake = "^3.17.2"
xlearn = "^0.40a1"
scikit-learn = "^0.23.1"
pyfm = "^0.2.4"
matplotlib = "^3.2.1"
tensorflow = "2.2.0"
setuptools = "^47.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
