[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Xiao, Linchen <linchen.xiao＠metronom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"
fastapi = "^0.61.0"
pydantic = "^1.6.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
